--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,3 +3,7 @@
 * {
   font-family: "Outfit", sans-serif;
 }
+
+.bg-custom-gradient {
+  background: linear-gradient(to bottom, #00008B 10%, #ffffff 100%);
+}
