--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,5 +5,5 @@
 }
 
 .bg-custom-gradient {
-  background: linear-gradient(to bottom, #00008B 10%, #ffffff 100%);
+  background: linear-gradient(to bottom, #00008B 10%, #F5F5F5 100%);
 }
