update home, responsive frontend

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,3 +7,23 @@
 .bg-custom-gradient {
   background: linear-gradient(to bottom, #00008B 10%, #F5F5F5 100%);
 }
+
+
+/* @media screen and (max-width: 768px){
+  .overflow-hidden{
+    overflow: hidden;
+    overflow-y: scroll !important;
+  }
+}
+
+@media screen and (min-width: 770px) and (max-width: 820px){
+  
+} */
+
+
+
+
+/* html, body {
+  height: 100%;
+  overflow: auto;
+} */
