--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,8 +12,12 @@
     @apply text-white bg-blue-500;
   }
 
-  .bookedSeats {
+  .unAvaiableSeats{
     @apply bg-gray-400 cursor-not-allowed lg:hover:bg-gray-500;
+  }
+
+  .bookedSeats{
+    @apply bg-red-300 cursor-not-allowed lg:hover:bg-red-400;
   }
 
   .seatsHover {
