--- a/frontend/src/components/BookingGuide/BookingGuide.module.css
+++ b/frontend/src/components/BookingGuide/BookingGuide.module.css
@@ -9,7 +9,7 @@
   }
   
   .title {
-    font-size: 2.5rem;
+    font-size: 2.7rem;
     font-weight: bold;
     color: white;
   }
@@ -33,7 +33,7 @@
   .stepTitle {
     font-size: 1.8rem;
     font-weight: bold;
-    color: #444;
+    color: #00008B;
     margin-bottom: 10px;
   }
   
