--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,18 +5,18 @@
 }
 
 .bg-custom-gradient {
-  background: linear-gradient(to bottom, #00008B 10%, #F5F5F5 100%);
+  background: linear-gradient(to bottom, #00008B 10%, #FFFFFF 100%);
 }
 
 
-/* @media screen and (max-width: 768px){
+ @media screen and (max-width: 768px){
   .overflow-hidden{
     overflow: hidden;
     overflow-y: scroll !important;
   }
 }
 
-@media screen and (min-width: 770px) and (max-width: 820px){
+/* @media screen and (min-width: 770px) and (max-width: 820px){
   
 } */
 
