--- a/frontend/src/CurrentBooking.css
+++ b/frontend/src/CurrentBooking.css
@@ -13,9 +13,10 @@
   }
   
   .current-booking h1 {
-    font-size: 3em;
+    font-size: 2.7em;
     margin-bottom: 30px;
     margin-top: 20px;
+    font-weight: bold;
     color: white;
   }
   
